# nordea-finnair-parser

./: .gitignore  LICENSE  README.org  default.nix  main.py  nordea-finnair-parse  parse.py  pyproject.toml  setup.py  shell.nix
