[tool.poetry]
name = "nordea-finnair-parser"
version = "0.1.0"
description = ""
authors = ["Kevin Rangel <code@venikx.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pdfplumber = "^0.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
